--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_screen">The Ummah Guide</string>
+
+    <string-array name="tab_titles">
+        <item>Quran</item>
+        <item>Sunnah</item>
+        <item>Ijma</item>
+    </string-array>
 </resources>
