--- a/app/src/free/res/values/strings.xml
+++ b/app/src/free/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_screen">The Ummah Guide</string>
     <string name="banner_ad_unit_id">ca-app-pub-6151727981200131/6305891354</string>
+    <string name="title_activity_read_post">Read</string>
 </resources>
